<resources>
    <string name="app_name">Profile</string>

    <string name="hint_name">Nombre</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_website">Sitio web</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_location">Ubicación</string>
    <string name="hint_latitude">Latitúd</string>
    <string name="hint_longitude">Longitúd</string>

    <string name="main_show_map">Ver en el mapa</string>
    <string name="main_settings">Habilitar ubicación</string>

    <string name="edit_title">Editar datos de usuario</string>

    <string name="key_name">k_name</string>
    <string name="key_email">k_email</string>
    <string name="key_website">k_website</string>
    <string name="key_phone">k_phone</string>
    <string name="key_latitude">k_lat</string>
    <string name="key_logitude">k_long</string>
    <string name="profile_error_no_resolve">No se econtró un app compatible</string>
    <string name="key_image">k_image</string>
    <string name="settings_title">Configuración</string>
    <string name="preferences_touch_title">Touch</string>
    <string name="preferences_eneable_clicks">Habilitar clicks</string>
    <string name="preferences_key_eneable_clicks">pref_eneable_clicks</string>
    <string name="preferences_data_title">Datos</string>
    <string name="preferences_delete_data">Eliminar datos de usuario</string>
    <string name="preferences_key_delete_data">pref_delete_data</string>
    <string name="preferences_restore_data">"Restaurar datos y configuraciones "</string>
    <string name="preferences_key_restore_data">pref_restore_data</string>

    <string name="preferences_img_size_small">Chica</string>
    <string name="preferences_img_size_medium">Mediana</string>
    <string name="preferences_img_size_large">Grande</string>
    <string name="preferences_img_key_size_small">pref_small</string>
    <string name="preferences_img_key_size_medium">pref_medium</string>
    <string name="preferences_img_key_size_large">pref_large</string>
    <string name="preferences_ui_title">Interfaz</string>
    <string name="preferences_iu_img_size">Tamaño de la imagen</string>
    <string name="preferences_key_iu_img_size">pref_ui_img_size</string>
    <string name="preference_ui_settings">Configuración</string>
    <string name="preferences_key_restore_settings">pref_ui_rest_settings</string>
    <string name="preferences_restore_settings">Restaurar la configuración</string>

</resources>